<resources>
    <string name="app_name">Calculator App</string>
    <string name="diplay">0.0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="bracet">()</string>

    <string name="plusSign">+</string>
    <string name="subractSign">-</string>
    <string name="divSign">÷</string>
    <string name="milSign">*</string>
    <string name="percentSign">%</string>
    <string name="equalSign">=</string>
    <string name="dotSign">.</string>

</resources>