<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#454C43"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/buttonlayout"
        android:layout_marginBottom="70dp"
        >

        <EditText
            android:id="@+id/inputnumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:cursorVisible="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/diplay"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:verticalScrollbarPosition="right"

            />
        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textColor="#D1CECE"
            android:ellipsize="end"
            android:textSize="25sp"
            android:focusable="false"
            android:clickable="false"
            android:background="@android:color/transparent"
            android:textAlignment="viewEnd"
            android:padding="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <android.widget.Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="C"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="clearBTN"
                />
            <android.widget.Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/seven"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="sevenBTN"
                />
            <android.widget.Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/four"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="fourBTN"
                />
            <android.widget.Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/one"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="oneBTN"
                />

            <android.widget.Button
                android:id="@+id/buttonbracet"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="parBTN"
                android:text="()"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <android.widget.Button
                android:id="@+id/percent"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="^"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="squarBTN"
                />

            <android.widget.Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/five"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="fiveBTN"
                />

            <android.widget.Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:onClick="twoBTN"/>

            <android.widget.Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/zero"
                android:onClick="zeroBTN"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <android.widget.Button
                android:id="@+id/cross"
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:drawableTop="@drawable/ic_baseline_backspace_24"
                android:drawableTint="@color/white"
                android:paddingTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="crossBTN"
                />
            <android.widget.Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/nine"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="nineBTN"
                />
            <android.widget.Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/six"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="sixBTN"
                />
            <android.widget.Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/three"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="threeBTN"
                />
            <android.widget.Button
                android:id="@+id/buttondot"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/dotSign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="dotBTN"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <android.widget.Button
                android:id="@+id/btndivide"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/divSign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="divideBTN"
                />
            <android.widget.Button
                android:id="@+id/btnmultiple"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/milSign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="multiplyBTN"
                />
            <android.widget.Button
                android:id="@+id/btnsubract"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/subractSign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="subractBTN"
                />
            <android.widget.Button
                android:id="@+id/btnplus"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/plusSign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="addBTN"
                />
            <android.widget.Button
                android:id="@+id/btnequal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/equalSign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="equalBTN"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>